<resources>
    <string name="app_name">Tabu</string>
    <string name="str_starte_spiel">Starte Spiel</string>
    <string name="str_regeln">Spielregeln</string>
    <string name="str_beenden">Beenden</string>

    <string name="txt_regeln">
        Ziel des Spiels:\n\n
        Ziel ist es, als Team so viele Begriffe wie möglich zu erraten.\n\n\n
        Spielablauf:\n\n
        Ein Spieler aus dem Team muss den anderen Teammitgliedern die Begriffe erklären ohne die
        "Tabuwörter" zu benutzen. Das Team hat eine Minute Zeit so viele Begriffe wie möglich zu
        erraten.\n
        Während des Spiels kontrolliert ein Spieler des gegnerischen Teams, ob der Spieler auch
        wirklich keine "Tabuwörter" benutzt. Erwischt dieser einen solchen Regelverstoß, kann er
        buzzern. Dann muss der Spieler einen neuen Begriff erraten.\n
        Der Buzzer kann im Hauptmenü aufgerufen werden.\n
        Das Team mit den meisten Punkten am Ende gewinnt.</string>
    <string name="str_bereitmachen">Mach Dich bereit!</string>
    <string name="str_erreichtePunkte">Punkte: 0</string>
    <string name="str_richtig">Richtig</string>
    <string name="str_naechste_karte">nächste Karte</string>
    <string name="str_platzhalter">Begriff</string>
    <string name="str_strafe">5 Sek Strafe</string>
    <string name="str_spiel_vorbei">Spiel vorbei</string>
    <string name="str_erreichte_punkte">erreichte Punkte:</string>
    <string name="str_platzhalter_punkte">0</string>
    <string name="str_gezogene_karten">gezogene Karten:</string>
    <string name="str_hauptmenue">Hauptmenü</string>
    <string name="str_platzhalter_zeit">0,00</string>
</resources>
