<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_spiel_vorbei"
        android:id="@+id/tv_spiel_vorbei"
        android:textSize="50sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_erreichte_punkte"
        android:id="@+id/tv_erreichte_punkte"
        android:layout_below="@+id/tv_spiel_vorbei"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_platzhalter_punkte"
        android:id="@+id/tv_punkte"
        android:layout_below="@+id/tv_erreichte_punkte"
        android:layout_centerHorizontal="true"
        android:textSize="50sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/str_gezogene_karten"
        android:id="@+id/textView"
        android:layout_below="@+id/tv_punkte"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_hauptmenue"
        android:id="@+id/btn_hauptmenue"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btn_hauptmenue"
        android:fastScrollAlwaysVisible="false"
        android:smoothScrollbar="true" />

</RelativeLayout>